--- a/TestJDBC/pom.xml
+++ b/TestJDBC/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.asg</groupId>
-  <artifactId>SearchEngine</artifactId>
+  <artifactId>TestJDBC</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>SearchEngine Maven Webapp</name>
+  <name>TestJDBC Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -14,9 +14,8 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-
   </dependencies>
   <build>
-    <finalName>SearchEngine</finalName>
+    <finalName>TestJDBC</finalName>
   </build>
 </project>
